fixing warnings (some probably related to java 11)